# SSE-convolution

./: .gitignore  CMakeLists.txt  README.md  convolve.c  convolve.h  convolve_2d.c  convolve_2d.h  get_terminal_size.py  multiple_convolve.c  pretty_print_times.py  py_test_convolve.py  test_convolve.c  test_data.c  test_data.h
